v0.7.1: Improve skill cost; Refactor code (#16)
* Support test cases for Fabric
* Rename package 'common' to 'platform'
* Support consuming health and satiety as skill cost