@@ -7,6 +7,21 @@ architectury {
     fabric()
 }
 
+sourceSets {
+    testServer {
+        compileClasspath += main.compileClasspath + main.output
+        runtimeClasspath += main.runtimeClasspath + main.output
+        compileClasspath += project(':common').sourceSets.testServer.output
+        runtimeClasspath += project(':common').sourceSets.testServer.output
+    }
+    testClient {
+        compileClasspath += main.compileClasspath + main.output
+        runtimeClasspath += main.runtimeClasspath + main.output
+        compileClasspath += project(':common').sourceSets.testClient.output
+        runtimeClasspath += project(':common').sourceSets.testClient.output
+    }
+}
+
 configurations {
     common {
         canBeResolved = true
@@ -26,6 +41,23 @@ configurations {
 
 loom {
     accessWidenerPath = project(':common').loom.accessWidenerPath
+
+    runs {
+        testServer {
+            server()
+            source sourceSets.testServer
+            vmArg "--enable-native-access=ALL-UNNAMED"
+            vmArg "-Dfabric-api.gametest"
+            vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
+            runDir "build/testServer"
+        }
+        testClient {
+            client()
+            source sourceSets.testClient
+            ideConfigGenerated project.rootProject == project
+            runDir "build/testServer"
+        }
+    }
 }
 
 repositories {
@@ -52,6 +84,11 @@ dependencies {
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
+
+    // Test dependencies from common
+    testServerImplementation "com.github.javaparser:javaparser-symbol-solver-core:${rootProject.javaparser_version}"
+    testServerImplementation "org.bitbucket.mstrobel:procyon-compilertools:${rootProject.procyon_version}"
+    testServerImplementation "org.vineflower:vineflower:${rootProject.vineflower_version}"
 }
 
 processResources {
